--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "mcp-plantops-advanced",
   "version": "1.1.0",
   "type": "module",
-  "main": "dist/index.js",
+  "module": "src/index.ts",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "build": "npx @smithery/cli build",
+    "dev": "npx @smithery/cli dev",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
